--- a/index.html
+++ b/index.html
@@ -10,9 +10,28 @@
   <meta name="theme-color" content="#1976d2">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
 <link rel="stylesheet" href="styles.bcf64037164b263b4611.css"></head>
 <body>
+  <script src="./assets/webgazer.js" type="text/javascript">
+  </script>
+
+  <script>
+    webgazer.setGazeListener(function(data, elapsedTime) {
+      if (data == null) {
+        return;
+      }
+      var xprediction = data.x; //these x coordinates are relative to the viewport
+      var yprediction = data.y; //these y coordinates are relative to the viewport
+      //alert(elapsedTime); //elapsed time is based on time since begin was called
+
+      console.log("x:" + xprediction + " & y: " + yprediction);
+
+    }).begin();
+  </script>
+
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.1a3c78b07cd6f16c6e9a.js" nomodule defer></script><script src="polyfills-es2015.1f913f16a2d346cc8bdc.js" type="module"></script><script src="main-es2015.b6d939b15c2a03893758.js" type="module"></script><script src="main-es5.b6d939b15c2a03893758.js" nomodule defer></script></body>
+<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.1a3c78b07cd6f16c6e9a.js" nomodule defer></script><script src="polyfills-es2015.1f913f16a2d346cc8bdc.js" type="module"></script><script src="main-es2015.cc5d192424c6743c0968.js" type="module"></script><script src="main-es5.cc5d192424c6743c0968.js" nomodule defer></script></body>
 </html>
