--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
 
 <link rel="stylesheet" href="styles.bcf64037164b263b4611.css"></head>
 <body>
+
+  <div class="cursor" id="myCursor">
+
+  </div>
   <script src="./assets/webgazer.js" type="text/javascript">
   </script>
 
   <script>
+
+
+    var element = document.getElementById( 'myCursor' );
+    element.style.width = '20px';
+    element.style.height = '20px';
+    element.style.backgroundColor = 'black';
+    element.style.zIndex = '100';
+    element.style.position = 'absolute';
+
     webgazer.setGazeListener(function(data, elapsedTime) {
       if (data == null) {
         return;
@@ -26,7 +39,10 @@
       var yprediction = data.y; //these y coordinates are relative to the viewport
       //alert(elapsedTime); //elapsed time is based on time since begin was called
 
-      console.log("x:" + xprediction + " & y: " + yprediction);
+      //console.log("x:" + xprediction + " & y: " + yprediction);
+
+      element.style.left = xprediction + 'px';
+      element.style.top = yprediction + 'px';
 
     }).begin();
   </script>
